--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -66,7 +66,7 @@
        <number>1</number>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="homePage">
        <layout class="QGridLayout" name="gridLayout_4" rowstretch="1,1" columnstretch="1,1">
@@ -2740,7 +2740,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>714</width>
+                 <width>690</width>
                  <height>383</height>
                 </rect>
                </property>
@@ -4680,7 +4680,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
         <item row="1" column="0">
          <widget class="QFrame" name="alarmFrame">
           <property name="styleSheet">
-           <string notr="true">.QFrame{border-radius: 5px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;}</string>
+           <string notr="true">.QFrame{border-radius: 5px;border-color:rgb(50,50,50);background-color:rgb(25,25,25);border-width: 1px;border-style: solid;}</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
@@ -5208,7 +5208,7 @@ Countdown</string>
         <item row="0" column="0">
          <widget class="QFrame" name="doorOpenFrame">
           <property name="styleSheet">
-           <string notr="true">.QFrame{border-radius: 5px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;}</string>
+           <string notr="true">.QFrame{border-radius: 5px;border-color:rgb(50,50,50);background-color:rgb(25,25,25);border-width: 1px;border-style: solid;}</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
@@ -5341,7 +5341,7 @@ Countdown</string>
                 </font>
                </property>
                <property name="styleSheet">
-                <string notr="true">color: rgb(255, 170, 0);border-radius: 5px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;</string>
+                <string notr="true">color: rgb(255, 170, 0);border-radius: 5px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;background-color:rgb(50,50,50);</string>
                </property>
                <property name="text">
                 <string>Waiting</string>
@@ -5467,6 +5467,12 @@ color:darkgrey;border-radius:3px;border-color: rgb(20,20,20);border-width: 1px;b
          </property>
          <property name="text">
           <string>Dashboard</string>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>16</width>
+           <height>16</height>
+          </size>
          </property>
          <property name="checkable">
           <bool>true</bool>
